--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.6",
-    "@material-ui/core": "latest",
     "core-js": "^2.6.2",
     "gatsby": "latest",
+    "gatsby-image": "^2.0.26",
     "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-source-filesystem": "^2.0.13",
+    "gatsby-transformer-sharp": "^2.1.10",
     "jss": "latest",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-helmet": "^5.2.0",
     "react-jss": "^8.1.0"
   },
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
