--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "deploy": "gatsby build --prefix-paths && cp ./src/CNAME public/ && gh-pages -d public"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1"
