--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "react-dom": "latest",
     "react-helmet": "^5.2.0",
     "react-jss": "^8.1.0",
-    "react-modal": "^3.8.1",
-    "react-slick": "^0.23.2",
-    "slick-carousel": "^1.8.1"
+    "react-modal": "^3.8.1"
   },
   "scripts": {
     "develop": "gatsby develop",
