--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "latest",
     "gatsby-image": "^2.0.26",
     "gatsby-plugin-emotion": "^4.0.1",
+    "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.5",
